--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="card-back">
                   <div class="center-wrap">
                     <div class="section text-center">
-                      <form action="registration.php" method="post"> <!-- Updated action to registration.php -->
+                      <form action="www.google.com" method="post"> <!-- Updated action to registration.php -->
                         <h4 class="mb-3 pb-3">Sign Up</h4>
                         <div class="form-group">
                           <input type="text" class="form-style" placeholder="Full Name" name="name" required>
