--- a/index.html
+++ b/index.html
@@ -7,13 +7,6 @@
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.9/css/unicons.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="styles.css">
-  <script>
-    function showAlert() {
-      alert("Login successfully!");
-      window.location.href = "https://www.google.com"; // Redirect to Google
-      return false; // Prevent form submission
-    }
-  </script>
 </head>
 <body>
   <div class="section">
@@ -26,11 +19,12 @@
             <label for="reg-log"></label>
             <div class="card-3d-wrap mx-auto">
               <div class="card-3d-wrapper">
+                <!-- Login Section -->
                 <div class="card-front">
                   <div class="center-wrap">
                     <div class="section text-center">
                       <h4 class="mb-4 pb-3">Log In</h4>
-                      <form onsubmit="return showAlert();"> <!-- Added onsubmit event -->
+                      <form action="register.php" method="post">
                         <div class="form-group">
                           <input type="email" class="form-style" placeholder="Email" name="email" required>
                           <i class="input-icon uil uil-at"></i>
@@ -45,22 +39,24 @@
                     </div>
                   </div>
                 </div>
+                
+                <!-- Signup Section -->
                 <div class="card-back">
                   <div class="center-wrap">
                     <div class="section text-center">
-                      <form action="www.google.com" method="post"> <!-- Updated action to registration.php -->
+                      <form action="register.php" method="post"> <!-- Ensure this points to the correct script -->
                         <h4 class="mb-3 pb-3">Sign Up</h4>
                         <div class="form-group">
-                          <input type="text" class="form-style" placeholder="Full Name" name="name" required>
-                          <i class="input-icon uil uil-user"></i>
+                            <input type="text" class="form-style" placeholder="Full Name" name="name" required>
+                            <i class="input-icon uil uil-user"></i>
                         </div>
                         <div class="form-group mt-2">
-                          <input type="email" class="form-style" placeholder="Email" name="email" required>
-                          <i class="input-icon uil uil-at"></i>
+                            <input type="email" class="form-style" placeholder="Email" name="email" required>
+                            <i class="input-icon uil uil-at"></i>
                         </div>
                         <div class="form-group mt-2">
-                          <input type="password" class="form-style" placeholder="Password" name="password" required>
-                          <i class="input-icon uil uil-lock-alt"></i>
+                            <input type="password" class="form-style" placeholder="Password" name="password" required>
+                            <i class="input-icon uil uil-lock-alt"></i>
                         </div>
                         <button type="submit" class="btn mt-4" name="send">Register</button>
                       </form>
