--- a/index.html
+++ b/index.html
@@ -20,25 +20,34 @@
             <div class="card-3d-wrap mx-auto">
               <div class="card-3d-wrapper">
                 <!-- Login Section -->
-                <div class="card-front">
-                  <div class="center-wrap">
-                    <div class="section text-center">
-                      <h4 class="mb-4 pb-3">Log In</h4>
-                      <form action="register.php" method="post">
-                        <div class="form-group">
-                          <input type="email" class="form-style" placeholder="Email" name="email" required>
-                          <i class="input-icon uil uil-at"></i>
-                        </div>
-                        <div class="form-group mt-2">
-                          <input type="password" class="form-style" placeholder="Password" name="password" required>
-                          <i class="input-icon uil uil-lock-alt"></i>
-                        </div>
-                        <button type="submit" class="btn mt-4">Login</button>
-                      </form>
-                      <p class="mb-0 mt-4 text-center"><a href="forgot_password.php" class="link">Forgot your password?</a></p>
-                    </div>
-                  </div>
-                </div>
+<div class="card-front">
+  <div class="center-wrap">
+    <div class="section text-center">
+      <h4 class="mb-4 pb-3">Log In</h4>
+      <!-- Remove the action attribute to prevent form submission to register.php -->
+      <form id="loginForm">
+        <div class="form-group">
+          <input type="email" class="form-style" placeholder="Email" name="email" required>
+          <i class="input-icon uil uil-at"></i>
+        </div>
+        <div class="form-group mt-2">
+          <input type="password" class="form-style" placeholder="Password" name="password" required>
+          <i class="input-icon uil uil-lock-alt"></i>
+        </div>
+        <!-- Add an onclick event to redirect to Google on button click -->
+        <button type="button" class="btn mt-4" onclick="redirectToGoogle()">Login</button>
+      </form>
+      <p class="mb-0 mt-4 text-center"><a href="forgot_password.php" class="link">Forgot your password?</a></p>
+    </div>
+  </div>
+</div>
+
+<script>
+  function redirectToGoogle() {
+    window.location.href = 'https://www.google.com';
+  }
+</script>
+
                 
                 <!-- Signup Section -->
                 <div class="card-back">
