--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       alert(data);
 
       // Redirect to Google after registration
-      window.location.href = 'https://www.google.com';
+      window.location.href = 'Main.html';
     })
     .catch(error => console.error('Error:', error));
   }
